fix wrapping

--- a/packages/openneuro-app/src/sass/crn_app/_dataset.file-tree.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dataset.file-tree.scss
@@ -190,6 +190,7 @@
         .dataset-git-hash {
             .col-xs-12 .panel-group .panel.panel-default .panel-body {
                 padding: 8px 12px;
+                overflow-wrap: break-word;
             }
         }
     }
